# Embarca2_AtmoSyncMQTT

./: CMakeLists.txt  README.md  main.c  mqtt_client.c  setup.h
inc/: buzzer.h  matriz_led.h  modos.h
lib/: buzzer.c  matriz_led.c  modos.c  setup.c  ssd1306.c
src/: modos.c
